fix project visibility for smaller screens

--- a/src/App.css
+++ b/src/App.css
@@ -243,7 +243,7 @@ section.work {
   }
 
   .project {
-    opacity: 1;
+    opacity: 1 !important;
   }
 
   .project-col:nth-child(2) {
